tasks added to MAGIC

--- a/fcc-MAGIC/MAGIC.ipynb
+++ b/fcc-MAGIC/MAGIC.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "39452a0e",
+   "execution_count": 180,
+   "id": "8d53a3c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "67887d59",
+   "execution_count": 181,
+   "id": "a12a72c0",
    "metadata": {},
    "outputs": [
     {
@@ -123,126 +123,37 @@
        "      <td>356.4620</td>\n",
        "      <td>g</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19015</th>\n",
-       "      <td>21.3846</td>\n",
-       "      <td>10.9170</td>\n",
-       "      <td>2.6161</td>\n",
-       "      <td>0.5857</td>\n",
-       "      <td>0.3934</td>\n",
-       "      <td>15.2618</td>\n",
-       "      <td>11.5245</td>\n",
-       "      <td>2.8766</td>\n",
-       "      <td>2.4229</td>\n",
-       "      <td>106.8258</td>\n",
-       "      <td>h</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19016</th>\n",
-       "      <td>28.9452</td>\n",
-       "      <td>6.7020</td>\n",
-       "      <td>2.2672</td>\n",
-       "      <td>0.5351</td>\n",
-       "      <td>0.2784</td>\n",
-       "      <td>37.0816</td>\n",
-       "      <td>13.1853</td>\n",
-       "      <td>-2.9632</td>\n",
-       "      <td>86.7975</td>\n",
-       "      <td>247.4560</td>\n",
-       "      <td>h</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19017</th>\n",
-       "      <td>75.4455</td>\n",
-       "      <td>47.5305</td>\n",
-       "      <td>3.4483</td>\n",
-       "      <td>0.1417</td>\n",
-       "      <td>0.0549</td>\n",
-       "      <td>-9.3561</td>\n",
-       "      <td>41.0562</td>\n",
-       "      <td>-9.4662</td>\n",
-       "      <td>30.2987</td>\n",
-       "      <td>256.5166</td>\n",
-       "      <td>h</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19018</th>\n",
-       "      <td>120.5135</td>\n",
-       "      <td>76.9018</td>\n",
-       "      <td>3.9939</td>\n",
-       "      <td>0.0944</td>\n",
-       "      <td>0.0683</td>\n",
-       "      <td>5.8043</td>\n",
-       "      <td>-93.5224</td>\n",
-       "      <td>-63.8389</td>\n",
-       "      <td>84.6874</td>\n",
-       "      <td>408.3166</td>\n",
-       "      <td>h</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19019</th>\n",
-       "      <td>187.1814</td>\n",
-       "      <td>53.0014</td>\n",
-       "      <td>3.2093</td>\n",
-       "      <td>0.2876</td>\n",
-       "      <td>0.1539</td>\n",
-       "      <td>-167.3125</td>\n",
-       "      <td>-168.4558</td>\n",
-       "      <td>31.4755</td>\n",
-       "      <td>52.7310</td>\n",
-       "      <td>272.3174</td>\n",
-       "      <td>h</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>19020 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        fLength    fWidth   fSize   fConc  fConc1     fAsym   fM3Long  \\\n",
-       "0       28.7967   16.0021  2.6449  0.3918  0.1982   27.7004   22.0110   \n",
-       "1       31.6036   11.7235  2.5185  0.5303  0.3773   26.2722   23.8238   \n",
-       "2      162.0520  136.0310  4.0612  0.0374  0.0187  116.7410  -64.8580   \n",
-       "3       23.8172    9.5728  2.3385  0.6147  0.3922   27.2107   -6.4633   \n",
-       "4       75.1362   30.9205  3.1611  0.3168  0.1832   -5.5277   28.5525   \n",
-       "...         ...       ...     ...     ...     ...       ...       ...   \n",
-       "19015   21.3846   10.9170  2.6161  0.5857  0.3934   15.2618   11.5245   \n",
-       "19016   28.9452    6.7020  2.2672  0.5351  0.2784   37.0816   13.1853   \n",
-       "19017   75.4455   47.5305  3.4483  0.1417  0.0549   -9.3561   41.0562   \n",
-       "19018  120.5135   76.9018  3.9939  0.0944  0.0683    5.8043  -93.5224   \n",
-       "19019  187.1814   53.0014  3.2093  0.2876  0.1539 -167.3125 -168.4558   \n",
+       "    fLength    fWidth   fSize   fConc  fConc1     fAsym  fM3Long  fM3Trans  \\\n",
+       "0   28.7967   16.0021  2.6449  0.3918  0.1982   27.7004  22.0110   -8.2027   \n",
+       "1   31.6036   11.7235  2.5185  0.5303  0.3773   26.2722  23.8238   -9.9574   \n",
+       "2  162.0520  136.0310  4.0612  0.0374  0.0187  116.7410 -64.8580  -45.2160   \n",
+       "3   23.8172    9.5728  2.3385  0.6147  0.3922   27.2107  -6.4633   -7.1513   \n",
+       "4   75.1362   30.9205  3.1611  0.3168  0.1832   -5.5277  28.5525   21.8393   \n",
        "\n",
-       "       fM3Trans   fAlpha     fDist class  \n",
-       "0       -8.2027  40.0920   81.8828     g  \n",
-       "1       -9.9574   6.3609  205.2610     g  \n",
-       "2      -45.2160  76.9600  256.7880     g  \n",
-       "3       -7.1513  10.4490  116.7370     g  \n",
-       "4       21.8393   4.6480  356.4620     g  \n",
-       "...         ...      ...       ...   ...  \n",
-       "19015    2.8766   2.4229  106.8258     h  \n",
-       "19016   -2.9632  86.7975  247.4560     h  \n",
-       "19017   -9.4662  30.2987  256.5166     h  \n",
-       "19018  -63.8389  84.6874  408.3166     h  \n",
-       "19019   31.4755  52.7310  272.3174     h  \n",
-       "\n",
-       "[19020 rows x 11 columns]"
+       "    fAlpha     fDist class  \n",
+       "0  40.0920   81.8828     g  \n",
+       "1   6.3609  205.2610     g  \n",
+       "2  76.9600  256.7880     g  \n",
+       "3  10.4490  116.7370     g  \n",
+       "4   4.6480  356.4620     g  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(19020, 11)"
+      ]
+     },
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,54 +162,68 @@
     "col_names = ['fLength', 'fWidth', 'fSize', 'fConc', 'fConc1',\n",
     "             'fAsym', 'fM3Long', 'fM3Trans', 'fAlpha', 'fDist', 'class',]\n",
     "df = pd.read_csv('magic04.data', names=col_names)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "13450011",
-   "metadata": {},
-   "source": [
-    "## categorical values -> numerical values\n",
-    "\n",
-    "in `class` col\n",
-    "\n",
-    "g, h -> 1, 0"
+    "df.head()\n",
+    "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ae9ee1bd",
+   "execution_count": 182,
+   "id": "772e911a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# df['class'] = pd.factorize(df['class'])[0]\n",
     "df['class'] = (df['class'] == 'g').astype(int)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "14dd123f",
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "cc64354e",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12332"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6688"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## plot hist of features vs probability g, h"
+    "sum(df['class'] == 1)\n",
+    "sum(df['class'] == 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "b359d86a",
+   "execution_count": 184,
+   "id": "072f1d64",
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_features():\n",
-    "  for label in df.columns[:-1]:\n",
-    "    plt.hist(df[df['class'] == 1][label], color='blue', alpha=0.7, label='gamma', density=True)\n",
-    "    plt.hist(df[df['class'] == 0][label], color='red', alpha=0.7, label='hadron', density=True)\n",
+    "  for label in col_names[:-1]:\n",
+    "    plt.hist(df[df['class'] == 1][label], label='gamma', alpha=0.7, density=True)\n",
+    "    plt.hist(df[df['class'] == 0][label], label='hadron', alpha=0.7, density=True)\n",
+    "    plt.legend()\n",
     "    plt.xlabel(label)\n",
     "    plt.ylabel('Probability')\n",
     "    plt.title(label)\n",
-    "    plt.legend()\n",
     "    plt.show()\n",
     "\n",
     "\n",
@@ -306,17 +231,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4683c15e",
-   "metadata": {},
-   "source": [
-    "## train, validation, test splitting"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "24765108",
+   "execution_count": 185,
+   "id": "6271ca8c",
    "metadata": {},
    "outputs": [
     {
@@ -333,62 +250,178 @@
        "((11412, 11), (3804, 11), (3804, 11))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# shuffled split 60%, 20%, 20%\n",
-    "train, valid, test = np.split(df.sample(frac=1, random_state=1), [int(len(df) * 0.6), int(len(df) * 0.8)])\n",
+    "train, valid, test = np.split(df.sample(frac=1, random_state=1), [int(len(df)*.6), int(len(df)*.8)])\n",
     "\n",
     "train.shape, valid.shape, test.shape"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "12bbf797",
+   "cell_type": "code",
+   "execution_count": 186,
+   "id": "4c9ab740",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## scaling, oversampling"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "abf0615f",
-   "metadata": {},
-   "source": [
-    "### `X` feature matrix, `y` target vector"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "\n",
+    "train_X = train[train.columns[:-1]].values\n",
+    "train_y = train['class'].values\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "train_X = scaler.fit_transform(train_X)\n",
+    "\n",
+    "ros = RandomOverSampler()\n",
+    "train_X, train_y = ros.fit_resample(train_X, train_y)\n",
+    "\n",
+    "train_scaled = np.hstack((train_X, train_y.reshape((-1, 1))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "f2b540cf",
+   "execution_count": 188,
+   "id": "7ad8d73d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scaling(df, oversample=False):\n",
-    "  from sklearn.preprocessing import StandardScaler\n",
-    "  from imblearn.over_sampling import RandomOverSampler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "  X = df[df.columns[:-1]].values\n",
-    "  y = df[df.columns[-1]].values\n",
+    "valid_X = valid[valid.columns[:-1]].values\n",
+    "valid_y = valid['class'].values\n",
     "\n",
-    "  scaler = StandardScaler()\n",
-    "  X = scaler.fit_transform(X)\n",
+    "scaler = StandardScaler()\n",
+    "valid_X = scaler.fit_transform(valid_X)\n",
     "\n",
-    "  if oversample:\n",
-    "    ros = RandomOverSampler()\n",
-    "    X, y = ros.fit_resample(X, y)\n",
+    "valid_scaled = np.hstack((valid_X, valid_y.reshape((-1, 1))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "id": "7ffb2fd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "  data = np.hstack((X, y.reshape((-1, 1))))\n",
-    "  return data, X, y\n",
+    "test_X = test[test.columns[:-1]].values\n",
+    "test_y = test['class'].values\n",
     "\n",
+    "scaler = StandardScaler()\n",
+    "test_X = scaler.fit_transform(test_X)\n",
     "\n",
-    "train_scaled, train_X, train_y = scaling(train, oversample=True)\n",
-    "valid_scaled, valid_X, valid_y = scaling(valid)\n",
-    "test_scaled, test_X, test_y = scaling(test)"
+    "test_scaled = np.hstack((test_X, test_y.reshape((-1, 1))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "id": "ba3c8024",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((14694, 11), (14694, 10), (14694,))"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "((3804, 11), (3804, 10), (3804,))"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "((3804, 11), (3804, 10), (3804,))"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_scaled.shape, train_X.shape, train_y.shape\n",
+    "valid_scaled.shape, valid_X.shape, valid_y.shape\n",
+    "test_scaled.shape, test_X.shape, test_y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "id": "7db4ea2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7347"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4065"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(train['class'] == 1)\n",
+    "sum(train['class'] == 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f70efce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(7347)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(7347)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sum(train_y == 1)\n",
+    "sum(train_y == 0)"
    ]
   }
  ],
