--- a/fcc-MAGIC/tasks.ipynb
+++ b/fcc-MAGIC/tasks.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "f61cbdba",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
        " np.int64(9): 4}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,11 +188,39 @@
     "\n",
     "for num in array:\n",
     "  if num not in freq:\n",
-    "    freq[num] = 0\n",
-    "\n",
-    "  freq[num] += 1\n",
+    "    freq[num] = 1\n",
+    "  else:\n",
+    "    freq[num] += 1\n",
     "\n",
     "freq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "51b365ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(7)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mode_num = array[0]\n",
+    "mode_freq = 1\n",
+    "for num in freq:\n",
+    "  if freq[num] > mode_freq:\n",
+    "    mode_freq = freq[num]\n",
+    "    mode_num = num\n",
+    "\n",
+    "mode_num"
    ]
   }
  ],
