--- a/fcc-MAGIC/test.ipynb
+++ b/fcc-MAGIC/test.ipynb
@@ -1744,17 +1744,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "id": "6a60cf61",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x18a33272ba0>]"
+       "[<matplotlib.lines.Line2D at 0x1f83d627560>]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
