Line from Two Points

--- a/line-fit.ipynb
+++ b/line-fit.ipynb
@@ -356,7 +356,15 @@
    "id": "c3bbdfa0",
    "metadata": {},
    "source": [
-    "# Brute force line fitting"
+    "# Brute force line fitting\n",
+    "\n",
+    "**Line from Two Points**\n",
+    "\n",
+    "Given two points (x1, y1) and (x2, y2):  \n",
+    "1. Slope = (y2 - y1) / (x2 - x1)  \n",
+    "2. Intercept = y1 - (slope * x1)  \n",
+    "\n",
+    "Line equation: y = slope * x + intercept"
    ]
   },
   {
